[package]
name = "tellus"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.9"

[[bin]]
name = "tellus"
test = false
bench = false

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
